@@ -1,3 +1,11 @@
+2005-11-03  Wu Zhou  <woodzltc@cn.ibm.com>
+
+        Checked in by Elena Zannoni  <ezannoni@redhat.com>
+
+	* dwarf2read.c (read_structure_type): Add IBM XL C++
+	specific code to set TYPE_VPTR_FIELDNO and TYPE_VPTR_BASETYPE
+	of a virtual class if a field named "__vfp" is found. 
+
 2005-11-03  Jim Blandy  <jimb@redhat.com>
 
         Checked in by Elena Zannoni  <ezannoni@redhat.com>	
